# plover-debugging-console

./: README.md  setup.cfg
plover_debugging_console/: __init__.py
