[metadata]
name = plover-debugging-console
version = 0.2.0
author = user202729
description = A IPython debugging console for Plover.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-debugging-console
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
	background_zmq_ipython>=1.20200202.222340
py_modules = plover_debugging_console

[options.entry_points]
plover.extension =
	debugging_console = plover_debugging_console:Main
console_scripts =
	plover-debugging-console-connect = plover_debugging_console:connect
	plover-debugging-console-execute = plover_debugging_console:execute
